$Id$

2016-04-02  Christian Franke  <franke@computer.org>

	dev_interface.cpp, dev_interface.h: Add counter for objects derived
	from 'smart_device'.
	smartctl.cpp, smartd.cpp: Print error message if any objects remain
	on exit.

	os_linux.cpp: linux_megaraid_device: Remove unused member variable
	'm_busnum' (clang++: -Wunused-private-field) and the related ctor
	parameter.

	os_linux.cpp: Fixes suggested by clang analyser:
	Add or remove inconsistent nullptr checks.
	Remove dead increments.

2016-04-01  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: add missing commas in peripheral_dt_arr and
        add number of elements (2**5) so that won't happen again.

2016-03-31  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: 
	 - add samsung SAMSUNG-MZ7PC series (ticket #679)
	 - add KINGSTON SKC400S37128G (SSDNow KC400) (ticket #673, patch provided
	   by the reporter)
	 - add SanDisk SSD Plus series (ticket #674)
	 - add XceedIOPS SSD series (ticket #672)
	 - add Crucial BX200 SSD (ticket #643)

2016-03-30  Christian Franke  <franke@computer.org>

	Add support for multiple '-d TYPE' options for device scanning:
	dev_interface.cpp, dev_interface.cpp: Add new version of
	scan_smart_devices() which accepts list of types.
	smartctl.cpp, smartd.cpp: Allow multiple '-d TYPE' options.
	Use new scan_smart_devices().
	smartctl.8.in, smartd.conf.5.in: Document it.

	Makefile.am: Add man page support for --with-nvme-devicescan.
	smartd.8.in: Document NVMe DEVICESCAN for Linux.

	configure.ac: Use `...` instead of $(...) due to possible parsing
	problems since r4260.  Remove workaround for related bash bug.

2016-03-28  Christian Franke  <franke@computer.org>

	Add NVMe DEVICESCAN support for Linux:
	configure.ac: Add --with-nvme-devicescan option.
	os_linux.cpp: Scan for '/dev/nvme[0-99]' if '-d nvme' is specified
	or --with-nvme-devicescan is set.
	smartctl.cpp: Add "NVMe" to --scan info.

	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Enable NVMe